--- a/views/admin-photos.ejs
+++ b/views/admin-photos.ejs
@@ -92,18 +92,21 @@
         <% }) %>
       </section>
 
-      <% if (totalPages > 1) { %>
+      <% const currentPage = typeof page === 'number' ? page : 1; %>
+      <% const totalPageCount = typeof totalPages === 'number' ? totalPages : 1; %>
+
+      <% if (totalPageCount > 1) { %>
         <section class="card pagination-row">
-          <% if (page > 1) { %>
-            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= page - 1 %>">Previous</a>
+          <% if (currentPage > 1) { %>
+            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= currentPage - 1 %>">Previous</a>
           <% } else { %>
             <span class="page-link disabled">Previous</span>
           <% } %>
 
-          <p class="small-note page-label">Page <strong><%= page %></strong> of <strong><%= totalPages %></strong></p>
+          <p class="small-note page-label">Page <strong><%= currentPage %></strong> of <strong><%= totalPageCount %></strong></p>
 
-          <% if (page < totalPages) { %>
-            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= page + 1 %>">Next</a>
+          <% if (currentPage < totalPageCount) { %>
+            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= currentPage + 1 %>">Next</a>
           <% } else { %>
             <span class="page-link disabled">Next</span>
           <% } %>
